--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
+    "start": "node server.js",  // добавьте эту строку
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
